--- a/sass/global.scss
+++ b/sass/global.scss
@@ -1,4 +1,6 @@
-@import "./styles.scss";
+@import "styles.scss";
+@import "header.scss";
+@import "working.scss";
 
 *{
     box-sizing: border-box;
@@ -12,4 +14,43 @@ body{
 h1,h3
  {
     font-family: $font-title;
+}
+header, section{
+    margin-bottom: 40px;
+}
+
+.strong{
+    font-weight: 700;
+}
+
+.container{
+    margin: 0 20px;
+}
+
+.btn{
+    margin: 30px 60px;
+    background: linear-gradient($color-secondary, $color-primary); 
+    color: white;
+    border-radius: 50px;
+    padding: 20px;
+}
+
+.card{
+    width: 100%;
+    height: 70px;
+    border-radius: 20px;
+    &__body{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }    
+    &--working{        
+        display: flex;
+        align-items: center;
+        background: $color-grey-light;
+        &.store{
+            background: rgba($color-primary,.15);
+        }        
+    }
+    
 }
