--- a/sass/global.scss
+++ b/sass/global.scss
@@ -1,6 +1,12 @@
 @import "styles.scss";
 @import "header.scss";
 @import "working.scss";
+@import "restaurants.scss";
+@import "footer.scss";
+@import "menu.scss";
+@import "./jumbotron.scss";
+@import"./button.scss";
+
 
 *{
     box-sizing: border-box;
@@ -14,43 +20,18 @@ body{
 h1,h3
  {
     font-family: $font-title;
+    font-weight: 300;
 }
+
+a {
+    text-decoration: none;
+    color: color(dark);
+    }
+
 header, section{
     margin-bottom: 40px;
 }
 
-.strong{
-    font-weight: 700;
-}
-
-.container{
+main{
     margin: 0 20px;
-}
-
-.btn{
-    margin: 30px 60px;
-    background: linear-gradient($color-secondary, $color-primary); 
-    color: white;
-    border-radius: 50px;
-    padding: 20px;
-}
-
-.card{
-    width: 100%;
-    height: 70px;
-    border-radius: 20px;
-    &__body{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }    
-    &--working{        
-        display: flex;
-        align-items: center;
-        background: $color-grey-light;
-        &.store{
-            background: rgba($color-primary,.15);
-        }        
-    }
-    
 }
