--- a/sass/header.scss
+++ b/sass/header.scss
@@ -1,6 +1,7 @@
 .header{    
     &__logo{        
-        display: flex; 
+        display: flex;
+        justify-content: center; 
         border-bottom: 5px outset rgba(236,236,236,0.11);
         &--brand{
             display: block;
@@ -9,16 +10,28 @@
         }                       
     }              
     &__location{
-        background-color: $color-grey;
+        background-color: $background-location;
         height: 50px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
     &__container{
-        background: $color-grey-light;
+        background: $background-grey-light;
         text-align: center;
         padding: 20px 20px;        
     }
-
+    nav{
+        position: relative;
+        .fa-arrow-left{
+            position: absolute;
+            top: 40%;
+            left: 20px;
+        }
+    }
+    .header__image{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
 }
