--- a/sass/card.scss
+++ b/sass/card.scss
@@ -5,18 +5,71 @@
     padding: 5px;
     border-radius: 25px;
     box-shadow: $shadow;
-    &__image{
+    overflow: hidden;
+    &__link{
         position: relative;
-        
-        img{
+        img{      
             object-fit: cover;
             height: 100%;
             width: 100%;
             border-radius: 20px 20px 0 0;
             aspect-ratio: 16/9;
         }
+        &:hover,:active{
+            & > .card__image{
+                transform: scale(1.05);
+            }
+            & > .card__overlay{
+                transform: scale(1.05);
+                opacity: 0.5;
+                &--details{
+                    top: 50%;
+                    left: 50%;
+                    opacity: 1;
+                }
+            }
+        }
     }
+    &__overlay{
+        background: $background-grey-light;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 3;
+        opacity: 0;
+        transition: all 0.4s ease-in-out 0s;
+
+        &--details{
+            font-size: 25px;
+            color: color(dark);
+            position: absolute;
+            text-align: center;
+            padding-left: 1em;
+            padding-right: 1em;
+            width: 100%;
+            top: 20%;
+            left: 50%;
+            opacity: 0;
+            z-index: 4;
+            transform: translate(-50%, -50%);
+            transition: all 0.3s ease-in-out 0s;
+        }
+    }
+    &__image{
+        object-fit: cover;
+        height: 100%;
+        width: 100%;
+        transform-origin: 50% 50%;
+        transform: scale(1);
+        transition: all 0.4s ease-in-out 0s;
+        
+    }       
     &__badge{
+        z-index: 1;
         position: absolute;
         top:20px;
         right: 15px;
@@ -28,37 +81,21 @@
     }
     &__body{
         position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         padding: 10px;
         line-height: 1.6;
-        .heart{
-            position: absolute;
-            right: 8%;
-            top:20%;
-            background-color: color(dark);
+        & .like{
             width: 20px;
             height: 20px;
-            mask-image: url(../images/heart-regular.svg);
-            -webkit-mask-image: url(../images/heart-regular.svg);
-            background: linear-gradient(color(secondary),color(primary));
-            background-size: 100% 0px;
-            background-position: 100% 100%;
-            background-repeat: no-repeat;
-            transition: all 0.35s ease-in-out;
-            i{
-                height: 100%;
-                width: 100%;
-                background: color(dark);
-                display: flex;
-            }            
-            &:hover,:active{
-                i{
-                    color: transparent;
-                    background: transparent;
-                }
-                mask-image: url(../images/heart-solid.svg);
-                -webkit-mask-image: url(../images/heart-solid.svg);
-                background-size: 100% 100%;
-            }
         }
-    }
+        p{
+            margin: 0
+        }        
+    }    
+}
+
+.card-like{
+    @include like(25, 25, 25);
 }
