--- a/css/styles.css
+++ b/css/styles.css
@@ -503,30 +503,16 @@ template {
   height: 100%;
 }
 
-.working i {
-  color: #7e7e7e;
-  font-size: 22px;
-  margin: 0 30px;
-}
-.working i.store {
-  color: hsl(267deg, 66%, 60%);
-}
 .working__container {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.working__bullete {
-  color: hsl(0deg, 0%, 100%);
-  background: hsl(267deg, 66%, 60%);
-  border-radius: 50%;
-  height: 5px;
-  width: 5px;
-  padding: 12px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: -10px;
+@media only screen and (min-width: 992px) {
+  .working__container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
 
 .restaurants__container {
@@ -589,7 +575,7 @@ template {
 }
 
 .dish {
-  animation: dish-display 2000ms 500ms both;
+  animation: dish-display 1000ms 500ms both;
 }
 .dish__title {
   position: relative;
@@ -653,23 +639,51 @@ template {
   flex-direction: row;
   align-items: center;
 }
+.jumbotron-working__bullete {
+  color: hsl(0deg, 0%, 100%);
+  background: hsl(267deg, 66%, 60%);
+  border-radius: 50%;
+  height: 5px;
+  width: 5px;
+  padding: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -10px;
+}
+.jumbotron-working i {
+  color: #7e7e7e;
+  font-size: 22px;
+  margin: 0 30px;
+}
 .jumbotron-working.store {
   background: #efe6fa;
+}
+.jumbotron-working i.store {
+  color: hsl(267deg, 66%, 60%);
+}
+.jumbotron-working:hover, .jumbotron-working :active {
+  transform: scale(1.01);
+  background: #efe6fa;
+}
+.jumbotron-working:hover i.store, .jumbotron-working :active i.store {
+  color: hsl(267deg, 66%, 60%);
 }
 
 .jumbotron-menu {
   cursor: pointer;
-  animation: jumbotron-display 1000ms ease-in-out;
+  opacity: 0;
+  animation: jumbotron-display 750ms ease-in-out both;
   overflow: hidden;
 }
 .jumbotron-menu--dish1 {
-  animation-delay: 333.3333333333ms;
+  animation-delay: 1000ms;
 }
 .jumbotron-menu--dish2 {
-  animation-delay: 666.6666666667ms;
+  animation-delay: 1250ms;
 }
 .jumbotron-menu--dish3 {
-  animation-delay: 1000ms;
+  animation-delay: 1500ms;
 }
 .jumbotron-menu__body {
   width: 100%;
@@ -738,7 +752,6 @@ template {
 
 @keyframes jumbotron-display {
   0% {
-    opacity: 0;
     transform: translateY(999px);
   }
   100% {
@@ -756,6 +769,262 @@ template {
   display: block;
 }
 
+.spinner-cook {
+  display: flex;
+  position: fixed;
+  visibility: visible;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  animation: spinner 3500ms forwards;
+  z-index: 99;
+}
+
+.cook-content {
+  background: linear-gradient(hsl(317deg, 100%, 74%), hsl(267deg, 66%, 60%));
+  height: 100%;
+  width: 100%;
+  padding: 30px;
+  position: relative;
+  z-index: 1;
+}
+
+.cook-scene {
+  display: flex;
+}
+
+.cook-gaz {
+  margin: auto;
+  background: #eaeaea;
+  width: 200px;
+  max-width: 100%;
+  height: 200px;
+  max-height: auto;
+  position: relative;
+  top: 40vh;
+  border-top: 5px solid black;
+  z-index: initial;
+}
+.cook-gaz::before {
+  background: inherit;
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 10px;
+  top: 100%;
+  right: 10px;
+}
+.cook-gaz::after {
+  background: inherit;
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 10px;
+  top: 100%;
+  left: 10px;
+}
+.cook-gaz__title {
+  position: relative;
+  top: 20%;
+  text-align: center;
+  font-family: "Shrikhand", cursive;
+  font-weight: 300;
+  font-size: 30px;
+}
+@media only screen and (min-width: 767px) {
+  .cook-gaz {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+.cook-back {
+  position: relative;
+  width: 10px;
+  height: 20px;
+  left: 97%;
+  bottom: 160px;
+  background-color: hsl(0deg, 0%, 0%);
+}
+
+.cook-flame {
+  bottom: 10px;
+  left: 20px;
+  width: 50px;
+  height: 50px;
+  background: linear-gradient(-45deg, red, orange);
+  border-radius: 50px 50px 0px 50px;
+  transform: rotate(-135deg);
+  animation: 0.1s flame 10;
+  filter: blur(10px);
+  position: relative;
+  box-shadow: 17px 20px 90px #700;
+  border: 45px solid black;
+  border-left-width: 25px;
+  border-top-width: 25px;
+  z-index: -1;
+}
+.cook-flame:after, .cook-flame:before {
+  content: "";
+  width: 50px;
+  height: 50px;
+  display: block;
+  position: absolute;
+  background: linear-gradient(-45deg, red, orange);
+  animation: 0.2s flame 10;
+  transform: scale(0.8) rotate(20deg);
+  border-radius: 50px 50px 0px 50px;
+  top: 20px;
+}
+.cook-flame:before {
+  top: 0;
+  animation-duration: 0.09s;
+  transform: scale(0.9) rotate(-15deg) translate(10px, 0px);
+}
+
+.cook-pan {
+  position: relative;
+  bottom: 100px;
+  left: 10px;
+  width: 87px;
+  height: 15px;
+  border-radius: 0 0 1.4em 1.4em;
+  border-bottom: 1px solid #8f0707;
+  color: black;
+  background: black;
+  transform-origin: -15% 0;
+  animation: flip 1500ms linear 3;
+  transform-origin: bottom left;
+}
+.cook-pan::after {
+  content: "";
+  position: absolute;
+  bottom: 18px;
+  right: 85px;
+  width: 45px;
+  height: 7px;
+  background-color: transparent;
+  border-top: 1vh solid #333;
+  border-left: 1vh solid transparent;
+  border-radius: 100%;
+  transform: rotate(20deg) rotateX(0deg) scale(1.3, 0.9);
+  color: black;
+  background: black;
+}
+.cook-pan__pancake {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  animation: jump 1500ms 500ms ease-in-out 3;
+}
+.cook-pan__pastry {
+  position: relative;
+  left: 15px;
+  width: 70%;
+  height: 60%;
+  background-color: black;
+  color: black;
+  box-shadow: 0 0 3px 0 black;
+  border-radius: 100%;
+  animation: fly 1500ms 500ms cubic-bezier(0.47, 0.71, 0.37, 0.99) 3;
+}
+
+.cook-progress {
+  position: relative;
+  top: 25%;
+  height: 20px;
+  background: hsl(0deg, 0%, 0%);
+}
+.cook-progress::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #637373;
+  animation: progress 3s linear both;
+}
+
+@keyframes spinner {
+  0% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes progress {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes flame {
+  0% {
+    height: 50px;
+    width: 50px;
+  }
+  50% {
+    height: 40px;
+    width: 40px;
+  }
+  100% {
+    height: 50px;
+    width: 50px;
+  }
+}
+@keyframes flip {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: translate(10px);
+  }
+  20% {
+    transform: translate(-10px);
+  }
+  30% {
+    transform: rotate(-27deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes jump {
+  0% {
+    bottom: 0%;
+  }
+  25% {
+    bottom: 150%;
+  }
+}
+@keyframes fly {
+  0% {
+    bottom: 26%;
+  }
+  10% {
+    transform: rotate(0deg);
+    bottom: 40%;
+  }
+  50% {
+    bottom: 26%;
+  }
+  80% {
+    bottom: 40%;
+  }
+  100% {
+    bottom: 0%;
+    transform: rotate(-180deg);
+  }
+}
 * {
   box-sizing: border-box;
 }
