--- a/sass/global.scss
+++ b/sass/global.scss
@@ -7,7 +7,7 @@
 @import "menu.scss";
 @import "jumbotron.scss";
 @import "button.scss";
-
+@import "loader.scss";
 *{
     box-sizing: border-box;
 }
