--- a/css/styles.css
+++ b/css/styles.css
@@ -442,6 +442,16 @@ template {
 .card__body p {
   margin: 0;
 }
+@media only screen and (min-width: 767px) {
+  .card {
+    width: 45%;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .card {
+    width: 20%;
+  }
+}
 
 .card-like {
   width: 25px;
@@ -511,7 +521,8 @@ template {
 @media only screen and (min-width: 992px) {
   .working__container {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 40px;
   }
 }
 
@@ -520,10 +531,18 @@ template {
   flex-direction: column;
   gap: 30px;
 }
+@media only screen and (min-width: 767px) {
+  .restaurants__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 
 .footer {
   background: #353535;
   color: hsl(0deg, 0%, 100%);
+  padding: 0 0 30px 0;
 }
 .footer h3 {
   margin: 0 20px;
@@ -541,13 +560,23 @@ template {
   padding: 0;
   line-height: 1.6;
 }
+@media only screen and (min-width: 767px) {
+  .footer ul {
+    margin: 0 10px;
+  }
+  .footer li {
+    display: inline;
+    margin: 0 10px;
+  }
+}
 
 .menu {
   position: relative;
   top: -90px;
   border-radius: 20px 20px 0 0;
   background-color: #f6f6f6;
-  margin: 0;
+  margin: -90px 0;
+  height: calc(100% + 100px);
 }
 .menu section {
   display: flex;
@@ -669,6 +698,11 @@ template {
 .jumbotron-working:hover i.store, .jumbotron-working :active i.store {
   color: hsl(267deg, 66%, 60%);
 }
+@media only screen and (min-width: 992px) {
+  .jumbotron-working__body {
+    padding-right: 30px;
+  }
+}
 
 .jumbotron-menu {
   cursor: pointer;
@@ -760,13 +794,24 @@ template {
   }
 }
 .btn {
-  margin: 30px 60px;
+  margin: 30px auto;
   background: linear-gradient(hsl(317deg, 100%, 74%), hsl(267deg, 66%, 60%));
   color: hsl(0deg, 0%, 100%);
   border-radius: 50px;
   padding: 20px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   display: block;
+  max-width: 300px;
+  text-align: center;
+  font-weight: 700;
+}
+.btn__menu {
+  max-width: 200px;
+  margin: 50px auto;
+}
+.btn:hover {
+  background: linear-gradient(hsla(317deg, 100%, 74%, 0.75), hsla(267deg, 66%, 60%, 0.75));
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .spinner-cook {
@@ -781,32 +826,49 @@ template {
 }
 
 .cook-content {
-  background: linear-gradient(hsl(317deg, 100%, 74%), hsl(267deg, 66%, 60%));
-  height: 100%;
-  width: 100%;
+  background: #eaeaea;
+  height: 100vh;
+  width: 100vw;
   padding: 30px;
   position: relative;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .cook-scene {
   display: flex;
 }
 
+.cook-title {
+  position: relative;
+  bottom: 100px;
+  text-align: center;
+  font-family: "Shrikhand", cursive;
+  font-weight: 300;
+  font-size: 2.5rem;
+}
+@media only screen and (min-width: 767px) {
+  .cook-title {
+    font-size: 5rem;
+  }
+}
+
 .cook-gaz {
   margin: auto;
-  background: #eaeaea;
-  width: 200px;
+  background: #7e7e7e;
+  width: 100px;
   max-width: 100%;
-  height: 200px;
+  height: 100px;
   max-height: auto;
   position: relative;
-  top: 40vh;
   border-top: 5px solid black;
   z-index: initial;
 }
 .cook-gaz::before {
-  background: inherit;
+  background: #7e7e7e;
   content: "";
   position: absolute;
   height: 20px;
@@ -815,7 +877,7 @@ template {
   right: 10px;
 }
 .cook-gaz::after {
-  background: inherit;
+  background: #7e7e7e;
   content: "";
   position: absolute;
   height: 20px;
@@ -823,39 +885,36 @@ template {
   top: 100%;
   left: 10px;
 }
-.cook-gaz__title {
-  position: relative;
-  top: 20%;
-  text-align: center;
-  font-family: "Shrikhand", cursive;
-  font-weight: 300;
-  font-size: 30px;
-}
-@media only screen and (min-width: 767px) {
-  .cook-gaz {
-    width: 400px;
-    height: 400px;
-  }
-}
 
-.cook-back {
+.cook-window {
   position: relative;
-  width: 10px;
-  height: 20px;
-  left: 97%;
-  bottom: 160px;
-  background-color: hsl(0deg, 0%, 0%);
+  width: 80px;
+  height: 80px;
+  left: 11px;
+  bottom: 76px;
+  background-color: inherit;
+  border: 2px solid black;
+}
+.cook-window::before {
+  position: absolute;
+  content: "";
+  width: 15px;
+  height: 5px;
+  left: 29px;
+  bottom: 67px;
+  background-color: black;
+  z-index: 99;
 }
 
 .cook-flame {
-  bottom: 10px;
-  left: 20px;
+  bottom: 2px;
+  left: 14px;
   width: 50px;
   height: 50px;
   background: linear-gradient(-45deg, red, orange);
   border-radius: 50px 50px 0px 50px;
   transform: rotate(-135deg);
-  animation: 0.1s flame 10;
+  animation: 0.1s flame 100;
   filter: blur(10px);
   position: relative;
   box-shadow: 17px 20px 90px #700;
@@ -871,7 +930,7 @@ template {
   display: block;
   position: absolute;
   background: linear-gradient(-45deg, red, orange);
-  animation: 0.2s flame 10;
+  animation: 0.2s flame 20;
   transform: scale(0.8) rotate(20deg);
   border-radius: 50px 50px 0px 50px;
   top: 20px;
@@ -899,12 +958,12 @@ template {
 .cook-pan::after {
   content: "";
   position: absolute;
-  bottom: 18px;
+  bottom: 16px;
   right: 85px;
   width: 45px;
   height: 7px;
   background-color: transparent;
-  border-top: 1vh solid #333;
+  border-top: 0.5vh solid black;
   border-left: 1vh solid transparent;
   border-radius: 100%;
   transform: rotate(20deg) rotateX(0deg) scale(1.3, 0.9);
@@ -932,9 +991,10 @@ template {
 
 .cook-progress {
   position: relative;
-  top: 25%;
+  bottom: 100px;
   height: 20px;
-  background: hsl(0deg, 0%, 0%);
+  width: 15rem;
+  background: #637373;
 }
 .cook-progress::after {
   content: "";
@@ -943,8 +1003,13 @@ template {
   left: 0;
   width: 0;
   height: 100%;
-  background: #637373;
+  background: hsl(0deg, 0%, 0%);
   animation: progress 3s linear both;
+}
+@media only screen and (min-width: 767px) {
+  .cook-progress {
+    width: 30rem;
+  }
 }
 
 @keyframes spinner {
