--- a/sass/button.scss
+++ b/sass/button.scss
@@ -1,10 +1,21 @@
 
 .btn{
-    margin: 30px 60px;
+    margin: 30px auto;
     background: $background-button;
     color: color(light);
     border-radius: 50px;
     padding: 20px;
-    box-shadow: $shadow;
+    box-shadow: $button-shadow;
     display: block;
+    max-width: 300px;
+    text-align: center;
+    font-weight: 700;
+    &__menu{
+        max-width: 200px;
+        margin: 50px auto;
+    }
+    &:hover{
+        background: $background-button-hover;
+        box-shadow: $button-shadow-hover; 
+    }
 }
