--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,6 +1,7 @@
 .footer{
     background: $background-footer;
     color: color(light);
+    padding: 0 0 30px 0;
     
     h3{
         margin: 0 20px;
@@ -17,5 +18,14 @@
         list-style: none;
         padding: 0;
         line-height: 1.6;
+    }    
+    @include break-to(small){
+        ul{
+            margin: 0 10px;
+        }
+        li {
+            display: inline;
+            margin: 0 10px;
+        }
     }    
 }
