--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -2,4 +2,9 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    @include break-to(small){
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
