add alt to restaurant images

--- a/sass/jumbotron.scss
+++ b/sass/jumbotron.scss
@@ -38,7 +38,7 @@ $anim-delay: calc($anim-dur / $num-dishs);
     &:hover, :active{
         transform: scale(1.01);
         background: $working-store;
-        i{        
+        .fa-solid{        
             color:color(primary);        
         }
     }
